# TorchCompute

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Paths.txt  compute.cpp  compute.hpp  pch.hpp  tc.cpp  tc.hpp  tests.cpp  tests.hpp
Compute/: CMakeLists.txt  compute.hpp  gradients.cpp  gradients.hpp  gradients.hppi  kmeans.cpp  kmeans.cppi  kmeans.hppi  linalg_utils.cpp  linalg_utils.hpp  linalg_utils.hppi  lstq.cpp  lstq.hpp  lstq.hppi  pch.hpp  random.cpp  random.hpp  random.hppi  tests.cpp
Compute/Compute/: gradients.hpp  random.cpp
Compute/Expression/: expression_nodes.hpp  shunter.cpp
Compute/Optim/: solver.cpp
Expression/: expression.cpp  expression.hpp  expression_nodes.cpp  expression_nodes.hpp  lexer.cpp  lexer.hpp  lexer_default.cpp  nodes.cpp  nodes.hpp  parsing.cpp  parsing.hpp  shunter.cpp  shunter.hpp  token.cpp  token.hpp
Expression/Parser/: lexer.cpp  lexer.hpp  lexer_default.cpp  shunter.cpp  shunter.hpp  token.cpp  token.hpp  token_algebra.cpp  token_algebra.hpp
Expression/TokenAlgebra/: token_algebra.cpp  token_algebra.hpp
Expression/TokenAlgebra/Binary/: add.cpp  add.hpp  div.cpp  div.hpp  mul.cpp  mul.hpp  pow.cpp  pow.hpp  sub.cpp  sub.hpp
Expression/TokenAlgebra/Unary/: neg.cpp  neg.hpp  trig.cpp  trig.hpp  unary.cpp  unary.hpp
FFI/: ffi.h  mp_optim_interface.cpp  mp_optim_interface.h
Models/: adc.cpp  models.cpp  models.hpp  models.hppi  mp_model.cpp  mp_models.cpp  mp_models.hpp  simple_diffusion.cpp  vfa.cpp
Optim/: gn.cpp  gn.hpp  lm.cpp  lm.hpp  lmp.cpp  lmp.hpp  model.cpp  model.cppi  model.hpp  model.hppi  mp_expr.cpp  mp_expr.hpp  mp_model.cpp  mp_model.hpp  optim.cpp  optim.hpp  sgn.cpp  sgn.hpp  slma.cpp  slma.hpp  slmp.cpp  slmp.hpp  solver.cpp  solver.hpp  stlmp.cpp  stlmp.hpp  str.cpp  str.hpp  strp.cpp  strp.hpp  tr.cpp  tr.hpp
Optim/Dep/: lm.cpp  lm.hpp  solver.cpp  solver.hpp
Optim/MP/: mp_expr.cpp  mp_expr.hpp  mp_model.cpp  mp_model.hpp  mp_optim.cpp  mp_optim.hpp  mp_slm.cpp  mp_slm.hpp  mp_strp.cpp  mp_strp.hpp
Prototyping/: inplace.py  least_squares.py  matrix_tests.py  ml_optim.py  random_choice.py  symenginetest.py  sympytest.py
Prototyping/CPP/: p1.cpp
Prototyping/Py/: lbfgs.py  matrix_tests.py
Tests/: test_diff_expression.cpp  test_env.cpp  test_expression.cpp  test_expression_model.cpp  test_expression_optim.cpp  test_gn.cpp  test_ivim.cpp  test_lexer.cpp  test_linear_fit.cpp  test_lstq.cpp  test_model.cpp  test_sgn.cpp  test_shunter.cpp  test_slm.cpp  test_slma.cpp  test_slmp.cpp  test_stlmp.cpp  test_strp.cpp  test_threading.cpp  test_token_algebra.cpp
TorchCompute/: CMakeLists.txt  TorchCompute.cpp  TorchCompute.hpp  pch.hpp  tests.cpp  tests.hpp
TorchCompute/Compute/: gradients.cpp  kmeans.cpp  kmeans.hpp
TorchCompute/Expression/: expression.cpp  expression.hpp  parsing.cpp  shunter.hpp
TorchCompute/Optim/: lm.cpp  lm.hpp  model.cpp  model.hpp  solver.cpp  solver.hpp
Transport/: CMakeLists.txt  DataHandler.cpp  DataHandler.hpp  DataManager.cpp  DataManager.hpp  Server.cpp  Server.hpp  Transport.cpp  pch.hpp
Transport/Clients/: client.py
Transport/Protos/: Tensor.proto
Transport/Threading/: ThreadPool.cpp  ThreadPool.hpp  ThreadPool.lic  ThreadsafeQueue.hpp
Transport/gRPC/: CMakeLists.txt  TensorSender.cpp  TensorSender.hpp  TransportService.cpp  TransportService.hpp
Transport/gRPC/Protos/: Tensor.proto  Transport.proto
